@@ -1,8 +1,12 @@
 sidux-manual-reader (0.1.2) UNRELEASED; urgency=low
 
+  [ Stefan Lippers-Hollmann ]
   * NOT RELEASED YET
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 23 Aug 2009 13:49:24 +0200
+  [ Fabian Wuertz ]
+  * QSettings added 
+
+ -- Fabian Wuertz <xadras@sidux.com>  Tue, 25 Aug 2009 11:03:04 +0200
 
 sidux-manual-reader (0.1.1) unstable; urgency=low
 
